--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>website</title>
 </head>
-
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -42,7 +41,7 @@
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h3>
+            <h3>Social Media Marketing</h3>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
@@ -64,7 +63,7 @@
             </p>
         </section>
         <section class="benefit-cost">
-            <h3>Cost Management</h4>
+            <h4>Cost Management</h4>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -72,7 +71,7 @@
         </section>
     </article>
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h5>
+        <h5>Made with ❤️️ by Horiseon</h5>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
